force-app/main/default/objects/DocFab_Form__mdt/fields/Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Number__c</fullName>
    <description
  >Unique form number for easy reference (e.g., 17, 51, 22). Used in page layout configuration.</description>
    <externalId>true</externalId>
    <label>Form Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>