force-app/main/default/objects/DocFab_Form__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description
  >Optional Salesforce icon name to display in the selection modal (e.g., utility:document, action:new_note). If not specified, defaults to utility:care_request_reviewer.</description>
    <label>Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>