force-app/main/default/objects/DocFab_Form__mdt/fields/Page_Layout_Label__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout_Label__c</fullName>
    <description
  >Display label shown in the selection modal when users choose between forms. This is the user-friendly name shown in the UI. If blank, the DeveloperName will be used.</description>
    <label>Page Layout Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>